# CasHash_CUDA

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~  README.org  job.sh.in
include/: CasHashMatcher.h  HashConverter.h  HashConverter.h~  HashMatcher.h  KeyFileReader.h  Share.h  Share.h~  hashConverterKernel.h
src/: CasHashMatcher.cpp  HashConverter.cpp  HashConverter.cpp~  HashConverter.cu  HashMatcher.cpp  HashMatcher.cu  KeyFileReader.cpp  TestCasHashMatcher.cpp  TestHashConverter.cpp  TestHashMatcher.cpp  TestKeyFileReader.cpp  hashConverterKernel.cu  main.cpp
